# napi-canon-cameras

./: .editorconfig  .eslintignore  .eslintrc.js  .gitignore  .npmrc  API.md  CMakeLists.txt  README.md  binding.gyp  camera-api-stubs.js  camera-api.d.ts  camera-api.js  eslint.config.mjs  jest.config.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: pipeline.yml
examples/: camera-info-json.ts  camera-info.ts  camera-keepalive.ts  folders.ts  generate-option-lists.ts  list-cameras.ts  liveview.ts  take-picture.ts
helpers/: bootstrap-stubs.js  create-tgz.js  examples.hbs  gzip-file.js  patch-headers.js  update-stubs.js
src/stubs/: package.json  public_api.ts  tsconfig.json
src/stubs/camera-api/: Aperture.ts  ApiError.ts  ApiIdentifier.ts  Camera.ts  CameraApi.ts  CameraBrowser.ts  CameraFile.ts  CameraProperty.ts  Directory.ts  ExposureCompensation.ts  FileFormat.ts  Flag.ts  ISOSensitivity.ts  ImageQuality.ts  LiveViewImage.ts  ObjectEvent.ts  Option.ts  OutputDevice.ts  PropertyAperture.ts  PropertyExposureCompensation.ts  PropertyFlag.ts  PropertyOption.ts  PropertyShutterSpeed.ts  ShutterSpeed.ts  StateEvent.ts  (+2 more)
stubs/: README.md
tests/: tests.library.ts  tests.stubs.ts
tests/common/: Aperture.test.ts  ApiError.test.ts  ExposureCompensation.test.ts  FileFormat.test.ts  Flag.test.ts  ISOSensitivity.test.ts  ObjectEvent.test.ts  Option.test.ts  OutputDevice.test.ts  PropertyAperture.test.ts  PropertyExposureCompensation.test.ts  PropertyFlag.test.ts  PropertyOption.test.ts  PropertyShutterSpeed.test.ts  ShutterSpeed.test.ts  StateEvent.test.ts  TimeZone.test.ts
